--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "package.json",
+  "name": "@ayslaw/lotide",
   "version": "1.0.0",
   "description": "mini clone of lodash library",
   "main": "assertArraysEqual.js",
@@ -7,16 +7,20 @@
     "test": "test"
   },
   "scripts": {
-    "test": "test"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ayslaw/lotide.git"
   },
-  "author": "@ayslaw",
+  "author": "Ayoub Farah",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ayslaw/lotide/issues"
   },
-  "homepage": "https://github.com/ayslaw/lotide#readme"
+  "homepage": "https://github.com/ayslaw/lotide#readme",
+  "dependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3"
+  }
 }
